new area for js, basic js implementation

--- a/index.html
+++ b/index.html
@@ -48,6 +48,13 @@
       </section>
     </section>
 
+    <section id="js_test_area">
+      <h2>JS test area</h2>
+      <div id="test_box">
+        <p>click me to change color!</p>
+      </div>
+    </section>
+
     <section id="about_me">
       <h2>ABOUT ME</h2>
       <section>
@@ -102,9 +109,8 @@
 
   <footer>
 
-
   </footer>
-  
+  <script src="script.js" async></script>
 </body>
 
 </html>
