--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Unbounded:wght@500&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Rock+Salt&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -78,6 +78,13 @@
         target="_blank">Developer Skill Levels</a></p>
       <section id="skillsets">
         <div>
+          <h3>Advanced:</h3>
+          <ul>
+            <li>Google-fu</li>
+          </ul>
+        </div>
+
+        <div>
           <h3>Advanced Beginner:</h3>
           <ul>
             <li>Javascript</li>
@@ -89,6 +96,7 @@
         <div>
           <h3>Beginner:</h3>
           <ul>
+            <li>Git/Github</li>
             <li>Python</li>
             <li>React</li>
             <li>Redux</li>
@@ -99,17 +107,41 @@
 
     <section id="contact">
       <h2>GET IN TOUCH</h2>
+      
+      <form action="mailto:colezajicek@gmail.com" method="POST">
+        <label for="name">Name: </label>
+        <input type="text" name="name" id='name' placeholder="Name" required>
+        <br>
+
+        <label for="email_address">Email: </label>
+        <input type="text" name="email" id="email_address" placeholder="Email Address" required>
+        <br>
+
+        <label for="box">Comments: </label>
+        <textarea name="comments" id="box" cols="30" rows="10" placeholder="Say something" required></textarea>
+        <br>
+
+        <label for="robot_check">I'm not a filthy robot:</label>
+        <input type="checkbox" name="robot_check" id="robot_check" required>
+        <br>
+
+        <label for="submittal">Fire Away:</label>
+        <input type="submit" name="submit" id="submittal" value="Send">
+      </form>
+
       <div>
         <a href="mailto:colezajicek@gmail.com">> Email</a>
         <a href="https://www.linkedin.com/in/tczajicek/" target="_blank">> LinkedIn</a>
+        <a href="https://github.com/colezajicek">> Github</a>
       </div>
     </section>
 
   </main>
 
   <footer>
-
+    <p>C 2023 Cole Zajicek</p>
   </footer>
+
   <script src="script.js" async></script>
 </body>
 
